# kaomoji-picker

./: Cargo.toml  README.md  config.json
src/: config.rs  kaomoji.rs  main.rs  rofi.rs  utils.rs
src/resources/: KAOMOJIS.json
