[package]
name = "kaomoji-picker"
version = "0.1.0"
edition = "2024"
include = [
    "src/resources/*.json",
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "config.json"
]


[dependencies]
clipboard = "0.5.0"
config = "0.15.11"
dirs = "6.0.0"
rofi = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


